force-app/main/default/objects/StatusReport__c/StatusReport__c.object-meta.xml
<CustomObject>
    <label>Status Report</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Status Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>