force-app/main/default/objects/StatusReport__c/fields/LinkProposal__c.field-meta.xml
<CustomField>
    <fullName>LinkProposal__c</fullName>
    <label>Link Proposta</label>
    <type>Url</type>
</CustomField>