force-app/main/default/objects/StatusReport__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Projeto</label>
    <referenceTo>AgileProject__c</referenceTo>
    <relationshipLabel>Status Reports</relationshipLabel>
    <relationshipName>StatusReports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>