force-app/main/default/objects/StatusReport__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sprint</label>
    <referenceTo>AgileSprint__c</referenceTo>
    <relationshipLabel>Status Reports</relationshipLabel>
    <relationshipName>StatusReports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>